# KiCad-PCB-Art-Helper

./: .gitignore  README.md  pyproject.toml
reference/: SkeleKatze-Copper.kicad_mod  SkeleKatze-Mask.kicad_mod  SkeleKatze-Silk.kicad_mod  config.yaml
scripts/: kicad-merge.cmd  kicad-merge.ps1  kicad-merge.sh
src/kicad_merge/: __init__.py  cli.py  merger.py
tests/: test_cli.py  test_merger.py  test_module_entrypoint.py
tests/fixtures/: mask.kicad_mod  silk.kicad_mod  user-text.kicad_mod
