[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-merge"
version = "0.1.0"
description = "Merge KiCad footprint graphics from multiple layer-specific .kicad_mod files"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "KiCad PCB Art Helper" }
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
kicad-merge = "kicad_merge.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]